  it didn't respect font size nor background colour then (Juan Antonio Ortega)
- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
- Corrected GetChecked() for events from checkable menu items (smanders)
- Fixed popup menus under Windows NT 4
- Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3

wxGTK:

- Fix wxNO_BORDER style for wxRadioBox (David Hart)


2.8.3
-----

All:

- Shut down the sockets gracefully (Sergio Aguayo)
- Fix extra indentation in wxHTML_ALIGN_JUSTIFY display (Chacal)

wxMac

- Corrected top border size for wxStaticBox with empty label (nusi).
- Fixed wxFont, wxPen and wxBrush accessor bugs introduced in 2.8.2.

wxMSW:

- Fixed wxFileName::GetSize() for large files.
- Fixed wxFont and wxPen accessor bugs introduced in 2.8.2.

wxGTK:

- Fixed handling of accelerators using PageUp/Down keys


2.8.2
-----

All:

- Added wxSizerFlags::Shaped(), FixedMinSize(), Top() and Bottom() methods.
- Added wxCSConv::IsOk() (Manuel Martin).
- Added wxDateTime::GetDateOnly().
- Made wxTextFile work with unseekable files again (David Hart).
- Added wxCONFIG_USE_SUBDIR flag to wxFileConfig (Giuseppe Bilotta).
- Added wxSearchCtrl::[Get|Set]DescriptiveText.
- Added wxToolBar::SetTool[Normal|Disabled]Bitmap for wxMSW, wxGTK and wxMac.
- Added wxRICHTEXT_SETSTYLE_REMOVE flag for removing styles, and
  wxRICHTEXT_HITTEST_OUTSIDE for more accurate hit-testing.
- Fixed a crash when writing wxRichTextCtrl styles.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.
- Fixed detection of number of processors under Linux 2.6
- Fixed Base64 computation in wxHTTP (p_michalczyk)
- Fix handling of wxSOCKET_REUSEADDR in wxDatagramSocket (troelsk)

Unix Ports:

- Fixed crash in wxGetUserName() in Unicode build

wxMSW

- Fix lack of spin control update event when control lost focus.