@@ -99,9 +99,11 @@ wxMSW:
 - Corrected GetChecked() for events from checkable menu items (smanders)
 - Fixed popup menus under Windows NT 4
 - Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3
+- Compilation fixed with WXWIN_COMPATIBILITY_2_6==0
 
 wxGTK:
 
+- Fix infinite loop when adding a wxStaticText control to a toolbar
 - Fix wxNO_BORDER style for wxRadioBox (David Hart)
 
 
